[package]
name = "thermal-wasm"
version = "0.0.1"
authors = ["Zach Zurn <zachzurn@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
thermal_renderer = { path = "../thermal_renderer" }
thermal_parser = { path = "../thermal_parser" }
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "Window", "Document", "ImageData"] }